--- a/upload-ai-api/package.json
+++ b/upload-ai-api/package.json
@@ -13,11 +13,14 @@
     "@types/node": "^20.6.0",
     "prisma": "^5.2.0",
     "tsx": "^3.12.9",
-    "typescript": "^5.2.2"
+    "typescript": "^5.2.2",
+    "zod": "^3.22.2"
   },
   "dependencies": {
     "@fastify/multipart": "^7.7.3",
     "@prisma/client": "5.2.0",
-    "fastify": "^4.23.0"
+    "dotenv": "^16.3.1",
+    "fastify": "^4.23.0",
+    "openai": "^4.6.0"
   }
 }
