--- a/upload-ai-api/package.json
+++ b/upload-ai-api/package.json
@@ -17,6 +17,7 @@
     "zod": "^3.22.2"
   },
   "dependencies": {
+    "@fastify/cors": "^8.3.0",
     "@fastify/multipart": "^7.7.3",
     "@prisma/client": "5.2.0",
     "dotenv": "^16.3.1",
