--- a/upload-ai-api/package.json
+++ b/upload-ai-api/package.json
@@ -3,6 +3,9 @@
   "version": "1.0.0",
   "description": "",
   "main": "index.js",
+  "prisma": {
+    "seed": "tsx prisma/seed.ts"
+  },
   "scripts": {
     "dev": "tsx watch src/index.ts"
   },
@@ -20,6 +23,7 @@
     "@fastify/cors": "^8.3.0",
     "@fastify/multipart": "^7.7.3",
     "@prisma/client": "5.2.0",
+    "ai": "^2.2.12",
     "dotenv": "^16.3.1",
     "fastify": "^4.23.0",
     "openai": "^4.6.0"
